<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card1="http://schemas.android.com/apk/res-auto"
    xmlns:card2="http://schemas.android.com/apk/res-auto"
    xmlns:card3="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stack"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/rel1">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />



        </android.support.design.widget.AppBarLayout>

        <vishal_shirke.finalapp.CustViewPager
            android:id="@+id/viewpagerCustomized"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appBarLayout" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/but1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:padding="0dp"
                android:text="@string/actiacts"

                android:textColor="@color/white"
                android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_height="180dp"
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            app:cardElevation="5dp"
            android:elevation="3dp"
            android:layout_below="@id/but1"
            card1:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/actshome"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <vishal_shirke.finalapp.TextViewTitle
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:textSize="24dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/TileColors1" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/but2"
                android:layout_weight="2"
                android:padding="0dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:text="@string/actrights"
                android:textColor="@color/white"
                android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_height="180dp"
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            app:cardElevation="5dp"
            android:layout_below="@id/but2"
            card1:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rightshome" />

                <vishal_shirke.finalapp.TextViewTitle
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"

                    android:textSize="24dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/TileColors1" />
            </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>



    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="190dp"
            android:layout_height="320dp">

            <Button
                android:id="@+id/but1"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border"
                android:text="@string/actiacts"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="0dp"
                android:elevation="3dp"
                android:paddingBottom="@dimen/cardview_compat_inset_shadow"
                android:layout_below="@id/but1"
                card1:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/abc"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <vishal_shirke.finalapp.TextViewTitle
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:textSize="24dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/TileColors1" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="190dp"
            android:layout_height="320dp">

            <Button
                android:id="@+id/but2"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border"
                android:text="@string/actrights"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="0dp"
                android:elevation="3dp"
                android:paddingBottom="@dimen/cardview_compat_inset_shadow"
                android:layout_below="@id/but2"
                card1:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/def"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <vishal_shirke.finalapp.TextViewTitle
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"

                        android:textSize="24dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/TileColors1" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </LinearLayout>-->

    <!--<android.support.v7.widget.CardView-->
        <!--android:id="@+id/card1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dp"-->
        <!--android:layout_marginBottom="7dp"-->
        <!--android:layout_marginLeft="6dp"-->
        <!--android:layout_marginRight="6dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@drawable/border1"-->
        <!--android:elevation="3dp"-->
        <!--card1:cardCornerRadius="2dp">-->

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@drawable/act" />-->

             <!--<vishal_shirke.finalapp.TextViewTitle-->
                 <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="44dp"-->
                <!--android:text="@string/actiacts"-->
                <!--android:textSize="24dp"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:textColor="@color/white" />-->
        <!--</RelativeLayout>-->

    <!--</android.support.v7.widget.CardView>-->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="220dp">

    <Button
        android:id="@+id/but3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/actinews"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:elevation="3dp"
        android:paddingBottom="@dimen/cardview_compat_inset_shadow"
        android:layout_below="@+id/but3"
        card1:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@drawable/newshome"
               />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <Button
            android:id="@+id/but4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/activideos"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:background="@color/colorPrimary"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:elevation="3dp"
            android:paddingBottom="@dimen/cardview_compat_inset_shadow"
            android:layout_below="@+id/but4"
            card1:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:background="@drawable/video345" />

                <!--<vishal_shirke.finalapp.TextViewTitle-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="44dp"-->
                <!--android:text="@string/actinews"-->
                <!--android:textSize="24dp"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:textColor="@color/TileColors1" />-->
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>



</LinearLayout>
</ScrollView>

